chapter_06/gatekeeper/pod_resource_limits/resource_limits_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1 
kind: K8sResourceLimits 
metadata: 
  name: resource-limits 
spec: 
  match: 
    kinds: 
      - apiGroups: [""] 
        kinds: ["Pod"]
